add filetyep and attachment models and Database context for Memorikeeper

--- a/MemoriKeeper.Model/MemoriKeeper.Model.csproj
+++ b/MemoriKeeper.Model/MemoriKeeper.Model.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="DatabaseContect\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DatabaseContect\" />
+  </ItemGroup>
 </Project>
