--- a/MemoriKeeper.Model/MemoriKeeper.Model.csproj
+++ b/MemoriKeeper.Model/MemoriKeeper.Model.csproj
@@ -12,4 +12,8 @@
   <ItemGroup>
     <Folder Include="DatabaseContect\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
+  </ItemGroup>
 </Project>
