--- a/MemoriKeeper/MemoriKeeper.csproj
+++ b/MemoriKeeper/MemoriKeeper.csproj
@@ -18,4 +18,7 @@
   <ItemGroup>
     <Folder Include="Views\FileType\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
 </Project>
