--- a/MemoriKeeper/appsettings.json
+++ b/MemoriKeeper/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source = DESKTOP-O1NBMET; Initial Catalog = MemoriKeeperDb; Integrated Security = SSPI; TrustServerCertificate = True; MultipleActiveResultSets=true"
+  }
 }
