Updated Database context and migrations

--- a/MemoriKeeper/appsettings.json
+++ b/MemoriKeeper/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source = DESKTOP-O1NBMET; Initial Catalog = MemoriKeeperDb; Integrated Security = SSPI; TrustServerCertificate = True; MultipleActiveResultSets=true"
+    "DefaultConnection": "workstation id=MemoriKeeperDb.mssql.somee.com;packet size=4096;user id=sunilkarmakar370_SQLLogin_1;pwd=apgoj9oao9;data source=MemoriKeeperDb.mssql.somee.com;persist security info=False;initial catalog=MemoriKeeperDb;TrustServerCertificate=True"
   }
 }
