--- a/MemoriKeeper/MemoriKeeper.csproj
+++ b/MemoriKeeper/MemoriKeeper.csproj
@@ -25,8 +25,10 @@
 
   <ItemGroup>
     <None Remove="ApiControllers\" />
+    <None Remove="Views\Diaryentry\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ApiControllers\" />
+    <Folder Include="Views\Diaryentry\" />
   </ItemGroup>
 </Project>
